--- a/EmployerAppFrontend/employerapp/src/app/Compoments/footer/footer.component.html
+++ b/EmployerAppFrontend/employerapp/src/app/Compoments/footer/footer.component.html
@@ -5,16 +5,16 @@
   </span>
   <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
       <li>
-          <a href="#" class="mr-4 hover:underline md:mr-6 ">About</a>
+          <a routerLink="/about" class="mr-4 hover:underline md:mr-6 ">About</a>
       </li>
       <li>
-          <a href="#" class="mr-4 hover:underline md:mr-6">Privacy Policy</a>
+          <a routerLink ="/privacy-policy"  class="mr-4 hover:underline md:mr-6">Privacy Policy</a>
       </li>
       <li>
-          <a href="#" class="mr-4 hover:underline md:mr-6">Licensing</a>
+          <a  routerLink = "/licensing" class="mr-4 hover:underline md:mr-6">Licensing</a>
       </li>
       <li>
-          <a href="#" class="hover:underline">Contact</a>
+          <a routerLink="/contact" class="hover:underline">Contact</a>
       </li>
   </ul>
   </div>
